--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <main>
         <nav class=borde id="menu">
-            <a href="#" class="menu_activo">CEO</a>
-            <a href="#">Nueva empresa</a>
-            <a href="#">Cotizador</a>
+            <a href="index.html">CEO</a>
+            <a href="nuestraEmpresa.html" class="menu-activo">Nuestra Empresa</a>
+            <a href="#cotizador">Cotizador</a>
         </nav>
         
         <section id="sec_quien_soy">
