--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
             <article class=borde>
                 <h2>Diseño Litográfico</h2>
                 <p>Nuestros servicios profesionales enfocados al diseño e impresión litográfica, nuestra maquinaria, como nuestro equipo de profesionales en las artes gráficas nos permite realizar grandes producciones con altos estándares de calidad.</p>
-                <button>Ver servicio</button>
+                <a class=boton_ver href="servicio_litografico.html">Ver servicio</a>
             </article>
             <article class="borde art_tz">
                 <h2>Diseño tienda</h2>
                 <p>Te creo y diseño una tienda online completamente funcional con WordPress y WooCommerce para que puedas comenzar a vender tus productos. Da igual que tenga pocos o miles de productos.</p>
-                <button>Ver servicio</button>
+                <a class="boton_ver" href="servicio_litografico.html">Ver servicio</a>
             </article>
             <article class="borde art_tz">
                 <h2>Mantenimiento web</h2>
                 <p>Me encargo de tener tu web hecha con WordPress al día y sin problemas, manteniéndola actualizada, optimizada, creando copias de seguridad, solucionando los problemas que vayan surgiendo, etc.</p>
-                <button>Ver servicio</button>    
+                <a class="boton_ver" href="servicio_litografico.html">Ver servicio</a>    
             </article>
         </section>
         </section>
